// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HorizontalAxis /> does not render ticks when \`TEST_PROPS.data\` is [] 1`] = `
<div
  class="sc-bwzfXH dPUqxH sc-bdVaJa bJonzb"
  data-testid="HorizontalAxis"
/>
`;

exports[`<HorizontalAxis /> does not update when \`props.data\` is changed to [] 1`] = `
<div
  class="sc-bwzfXH dPUqxH sc-bdVaJa bJonzb"
  data-testid="HorizontalAxis"
>
  <div
    class="sc-htpNat cghrJv"
  >
    04:16 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    05:15 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    06:13 PM
  </div>
</div>
`;

exports[`<HorizontalAxis /> does not update when \`props.data\`, \`props.tickCount\` does not change & other props changes 1`] = `
<div
  class="sc-bwzfXH dPUqxH sc-bdVaJa bJonzb"
  data-testid="HorizontalAxis"
>
  <div
    class="sc-htpNat cghrJv"
  >
    04:16 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    05:15 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    06:13 PM
  </div>
</div>
`;

exports[`<HorizontalAxis /> renders without crashing 1`] = `
<div
  class="sc-bwzfXH dPUqxH sc-bdVaJa bJonzb"
  data-testid="HorizontalAxis"
>
  <div
    class="sc-htpNat cghrJv"
  >
    04:16 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    05:15 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    06:13 PM
  </div>
</div>
`;

exports[`<HorizontalAxis /> updates when \`props.tickCount\` changes 1`] = `
<div
  class="sc-bwzfXH dPUqxH sc-bdVaJa bJonzb"
  data-testid="HorizontalAxis"
>
  <div
    class="sc-htpNat cghrJv"
  >
    04:16 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    04:29 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    04:42 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    04:55 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    05:08 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    05:21 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    05:34 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    05:47 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    06:00 PM
  </div>
  <div
    class="sc-htpNat cghrJv"
  >
    06:13 PM
  </div>
</div>
`;
